--- a/api_request_output.xaml
+++ b/api_request_output.xaml
@@ -83,6 +83,7 @@
       <AssemblyReference>System.Private.Uri</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.ViewModels</AssemblyReference>
+      <AssemblyReference>System.Memory.Data</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="api request output" sap:VirtualizedContainerService.HintSize="472,1266" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -118,7 +119,7 @@
     <If sap:VirtualizedContainerService.HintSize="410,793" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Condition>
         <InArgument x:TypeArguments="x:Boolean">
-          <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_24">output_code != 400 &amp;&amp; output_code != 500</CSharpValue>
+          <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_32">output_code != 400 &amp;&amp; output_code != 500 &amp;&amp; output_code != 404</CSharpValue>
         </InArgument>
       </If.Condition>
       <If.Then>
